--- a/.github/workflows/rust-bench.yaml
+++ b/.github/workflows/rust-bench.yaml
@@ -23,7 +23,9 @@ jobs:
 
       - name: Run benchmark with criterion
         working-directory: ./rust
-        run: cargo criterion --output-format bencher --benches 2>&1 | tee output.txt
+        run: |
+          cargo criterion --output-format bencher --benches 2>&1 | grep bench > output.txt
+          cat output.txt
 
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
@@ -36,4 +38,4 @@ jobs:
           alert-threshold: '200%'
           comment-on-alert: true
           fail-on-alert: true
-          alert-comment-cc-users: '@nreinicke @robfitzgerald'
+          alert-comment-cc-users: '@brycemines'
