--- a/.github/workflows/rust-bench.yaml
+++ b/.github/workflows/rust-bench.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run benchmark with criterion
         working-directory: ./rust
-        run: cargo bench -p testing-things -- --output-format bencher | tee output.txt
+        run: cargo bench -p routee-compass -- --output-format bencher | tee output.txt
 
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
